[package]
name = "svo"
version = "0.1.0"
authors = ["Max Breitenfeldt <git@mxbr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gpu
futures = "0.3.5"
wgpu = "0.6.0"
shaderc = "0.6.2"
glsl-layout = "0.3.2"

# gui
clipboard = "0.5.0"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-wgpu = "0.9.0"

# windowing
winit = "0.22"

# cast to glsl uniform
bytemuck = "1.4.1"
